**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.14 beta
------------------------
  - Fixed defect  #85 Exception thrown when IMPAwards image not found
  - Enhancement   #91 Ordered by IMDB-Ranking
  - Enhancement  #100 New field on details page with a name specified in the libraries.xml to seperate different USB devices
  - Enhancement  #112 Support for BD-50 Dual-Layer Disc rips
  - Enhancement  #128 Better detection of TV series air dates.
  - Enhancement  #148 Enh: Get Metadata from tags
  - Fixed defect #196 Focus on alphabets or categories resets to 09 every time you press return on remote.
  - Enhancement  #197 Latest X movies in Y days
  - Enhancement  #214 Support for local fanart files
  - Enhancement  #244 Create a master list of all movies/shows (no trailers)
  - Fixed defect #272 Indexing Issue with shows with more than 10 seasons.
  - Enhancement  #285 Option to use outline field in XBMC NFO files for "Short" Plot Description
  - Enhancement  #294 Regenerate image files if local copies are newer than jukebox versions
  - Enhancement  #297 Updating Jukebox files based on updated NFO file
                      Scanner will now check for an updated NFO file, if there is a poster URL, it will force the download and use of that poster.
  - Enhancement  #298 Property to control the scanning of newer NFO files or not.
  - Fixed defect #299 Jukebox Cleanup causes null pointer failues
  - Enhancement  #300 Different Fanart for different tv seasons
  - Enhancement  #301 Episode plots made available in the xsl file
  - Fixed defect #302 Library path need to be standardised in the code, will now add a trailing "/" if needed
  - Fixed defect #303 Divider and spacer does not show up on the popcorn.
  - Fixed defect #304 When there is no full summary on IMDB the plot is set to NONE.